<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg"
    tools:context=".MusicIsMeditatingFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="245dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/musicismeditating" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:layout_marginTop="50dp"
        android:textColor="#fff"
        android:gravity="center"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Description1"
        android:textColor="#fff"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="#fff"
            android:layout_gravity="bottom|start"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            />


        <TextView
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:textColor="#fff"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            />

    </LinearLayout>

</LinearLayout>